--- a/src/com/abajar/crrcsimeditor/MainFrame.form
+++ b/src/com/abajar/crrcsimeditor/MainFrame.form
@@ -13,38 +13,6 @@
             <Property name="name" type="java.lang.String" value="jMenu1" noResource="true"/>
           </Properties>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="jMenu2">
-          <Properties>
-            <Property name="text" type="java.lang.String" resourceKey="jMenu2.text"/>
-            <Property name="name" type="java.lang.String" value="jMenu2" noResource="true"/>
-          </Properties>
-          <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="TopViewOption">
-              <Properties>
-                <Property name="text" type="java.lang.String" resourceKey="TopViewOption.text"/>
-                <Property name="name" type="java.lang.String" value="TopViewOption" noResource="true"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="RightViewOption">
-              <Properties>
-                <Property name="text" type="java.lang.String" resourceKey="RightViewOption.text"/>
-                <Property name="name" type="java.lang.String" value="RightViewOption" noResource="true"/>
-              </Properties>
-              <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="RightViewOptionMouseClicked"/>
-              </Events>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="FrontViewOption">
-              <Properties>
-                <Property name="text" type="java.lang.String" resourceKey="FrontViewOption.text"/>
-                <Property name="name" type="java.lang.String" value="FrontViewOption" noResource="true"/>
-              </Properties>
-              <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="FrontViewOptionMouseClicked"/>
-              </Events>
-            </MenuItem>
-          </SubComponents>
-        </Menu>
       </SubComponents>
     </Menu>
   </NonVisualComponents>
@@ -72,12 +40,15 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="frontViewButton" alignment="0" max="32767" attributes="1"/>
-                  <Component id="topViewButton" alignment="0" max="32767" attributes="1"/>
-                  <Component id="rightViewButton" alignment="0" max="32767" attributes="1"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="frontViewButton" alignment="0" max="32767" attributes="1"/>
+                      <Component id="topViewButton" alignment="0" max="32767" attributes="1"/>
+                      <Component id="rightViewButton" alignment="0" max="32767" attributes="1"/>
+                  </Group>
+                  <Component id="addSurfaceButton" alignment="0" min="-2" max="-2" attributes="1"/>
               </Group>
-              <EmptySpace pref="341" max="32767" attributes="0"/>
+              <EmptySpace pref="309" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -89,7 +60,9 @@
               <Component id="frontViewButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="rightViewButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="198" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="addSurfaceButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="169" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -120,6 +93,15 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="rightViewButtonMouseClicked"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="addSurfaceButton">
+      <Properties>
+        <Property name="label" type="java.lang.String" resourceKey="addSurfaceButton.label"/>
+        <Property name="name" type="java.lang.String" value="addSurfaceButton" noResource="true"/>
+      </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="addSurfaceButtonMouseClicked"/>
       </Events>
     </Component>
   </SubComponents>
