--- a/src/com/abajar/crrcsimeditor/GeometryEditor.form
+++ b/src/com/abajar/crrcsimeditor/GeometryEditor.form
@@ -32,8 +32,10 @@
                       <Component id="addSectionButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="addControlButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="addMassButton" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane2" pref="281" max="32767" attributes="0"/>
+                  <Component id="jScrollPane2" pref="405" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -51,6 +53,7 @@
                           <Component id="addSurfaceButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="addSectionButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="addControlButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="addMassButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="jScrollPane1" alignment="0" min="-2" pref="275" max="-2" attributes="0"/>
@@ -140,6 +143,16 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addControlButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="addMassButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" resourceKey="addMassButton.text"/>
+        <Property name="enabled" type="boolean" value="false"/>
+        <Property name="name" type="java.lang.String" value="addMassButton" noResource="true"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addMassButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
